objects/AgreementSubContrAssoc__c.object
<CustomObject>
    <label>AgreementSubContractor</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>AgreementSubContractor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AgreementSubContractors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Sub_Contractor__c</fullName>
        <label>Sub Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AgreementSubContractors</relationshipLabel>
        <relationshipName>AgreementSubContrAssocs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_City__c</fullName>
        <formula>Sub_Contractor__r.ShippingCity &amp; &apos;, &apos; &amp;  Sub_Contractor__r.ShippingState&amp; &apos;, &apos; &amp;  Sub_Contractor__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Contractor City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Name__c</fullName>
        <formula>Sub_Contractor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Contractor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Street__c</fullName>
        <formula>Sub_Contractor__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Contractor Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Country__c</fullName>
        <formula>Sub_Contractor__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Contractor Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Details__c</fullName>
        <formula>Sub_Contractor__r.Name &amp; br() &amp; 
Sub_Contractor__r.ShippingStreet &amp; br() &amp; 
Sub_Contractor__r.ShippingCity &amp; &apos;, &apos; &amp; Sub_Contractor__r.ShippingState &amp; &apos;, &apos; &amp; Sub_Contractor__r.ShippingPostalCode &amp; BR() &amp; 
Sub_Contractor__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Contractor Details</label>
        <type>Text</type>
    </fields>
</CustomObject>